--- a/project2/mynginx-deploy.yaml
+++ b/project2/mynginx-deploy.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: nginx
         image: ajaycentos/mynginx:v1
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
 ---
